# django-affiliate-system

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  QUICK_START.md  README.md  fix_imports.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
django_affiliate_system/: __version__.py  models.py  serializers.py  signals.py  tasks.py  test_settings.py  test_urls.py  tests.py  urls.py  views.py
django_affiliate_system/services/: commission.py  tracking.py
django_affiliate_system/tests/: conftest.py
example_project/: db.sqlite3
