[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-affiliate-system"
version = "0.1.0"
description = "A comprehensive Django affiliate marketing and referral tracking system"
readme = "README.md" 
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ayodeji Akenroye", email = "aayodeji.f@gmail.com"}
]
keywords = ["django", "affiliate", "referral", "tracking", "commission", "marketing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.0,<5.2",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.2.0",
]

[project.optional-dependencies]
calendar = [
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
]
celery = [
    "celery>=5.2.0",
    "redis>=4.5.0",
]
dev = [
    "setuptools>=80.9.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
all = [
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "celery>=5.2.0",
    "redis>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/aayodejii/django-affiliate-system"
Documentation = "https://django-affiliate-system.readthedocs.io/"
Repository = "https://github.com/aayodejii/django-affiliate-system"
Issues = "https://github.com/aayodejii/django-affiliate-system/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100